--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@ Submit
 </button>
 <script>
 var mealsByCategory = {
-    A: ["Soup", "Juice", "Tea", "Others"],
-    B: ["Soup", "Juice", "Water", "Others"],
-    C: ["Soup", "Juice", "Coffee", "Tea", "Others"]
+    A: ["ASoup", "Juice", "Tea", "Others"],
+    B: ["BSoup", "Juice", "Water", "Others"],
+    C: ["CSoup", "Juice", "Coffee", "Tea", "Others"]
 }
 
     function changecat(value) {
